<resources>
    <string name="app_name">SDCardScanner</string>
    <string name="action_settings">Settings</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="view_large_files">View 10 biggest files</string>
    <string name="view_frequent_files">View 5 frequent file extensions</string>
    <string name="view_large_files_title">10 biggest files</string>
    <string name="view_frequent_files_title">5 frequent file extensions</string>
    <string name="avg_file_size">Average file size is : </string>
</resources>
